[package]
name = "hyper-networklistener-proxy"
version = "0.1.0"
authors = ["James Brown <jbrown@easypost.com>"]
license = "ISC"
readme = "README.md"
description = "Hyper NetworkListener implementing the PROXY protocol"

[dependencies]
hyper = "0.10"
byteorder = "*"

[dev_dependencies]
iron = "0.6"
clap = "2"
router = "0.6"
env_logger = "0.4"
log = "0.3"
